tests/snapshots/compile__unbounded_repetition.snap
---
source: tests/compile.rs
expression: "dump(\"TEXT = 1 TO n WORD\")"
---
nt0 rule `TEXT` (Rule(0)) start=s0
  s0
    -> s3 nt1
  s3 accept
nt1 repetition (Rep { lazy: false, single: false }) start=s1
  s1
    -> s2 WORD [Item]
  s2 accept
    -> s2 WORD [Item]
