tests/snapshots/compile__until_and_line.snap
---
source: tests/compile.rs
expression: "dump(\"TEXT = (ANY UNTILBEFORE ':') LINE NL\")"
---
nt0 rule `TEXT` (Rule(0)) start=s0
  s0
    -> s8 nt1
  s7 accept
  s8
    -> s9 nt2
  s9
    -> s7 a line break
nt1 repetition (Rep { lazy: false, single: false }) start=s1
  s1
    -> s3 anything but ':' [Item]
    -> s2 at ':'
  s2 accept
  s3
    -> s3 anything but ':' [Item]
    -> s2 at ':'
nt2 LINE (Builtin) start=s4
  s4
    -> s5 LineStart
  s5
    -> s5 anything but a line break
    -> s6 LineEnd
  s6 accept
